# PopTranslate

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.zh-CN.md  defaultsettings.h  io.github.glaumar.PopTranslate.metainfo.xml  io.github.glaumar.PopTranslate.yml  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myapplication.cpp  myapplication.h  poptranslate_dbus.cpp  poptranslate_dbus.h  popupdialog.cpp  popupdialog.h  popupdialog.ui  settingwindow.cpp  settingwindow.h  settingwindow.ui
DEB/: deb.cmake
data/: io.github.glaumar.PopTranslate.desktop
i18n/: poptranslate_zh_CN.ts
src/: abstracttranslator.h  allsettings.h  appmain.cpp  appmain.h  defaultsettings.h  dictionaries.cpp  dictionaries.h  dictionaryinfo.h  imagecropper.cpp  imagecropper.h  lang2iso639.cpp  lang2iso639.h  langcode2name.cpp  langcode2name.h  main.cpp  mdict.cpp  mdict.h  myapplication.cpp  myapplication.h  ocr.cpp  ocr.h  onlinetranslator.cpp  onlinetranslator.h  pageindicator.cpp  pageindicator.h  pageindicator.ui  poptranslate.h.in  poptranslate_dbus.cpp  poptranslate_dbus.h  poptranslatesettings.cpp  poptranslatesettings.h  popupdialog.cpp  popupdialog.h  popupdialog.ui  pybind11_wrap.h  screengrabber.cpp  screengrabber.h  settingwindow.cpp  settingwindow.h  settingwindow.ui  (+6 more)
